--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babelify": "^7.3.0",
     "browserify-livereload": "^1.0.10",
     "ecstatic": "^2.1.0",
+    "exorcist": "^0.4.0",
     "notify-error": "^1.2.0",
     "npm-run-all": "^4.0.2",
     "onchange": "^3.2.1",
@@ -41,7 +42,7 @@
   "scripts": {
     "serve": "ecstatic .",
     "start": "npm-run-all -lpr serve watch monitor",
-    "minify": "uglifyjs --in-source-map inline --source-map-inline -c warnings=false -p relative",
+    "minify": "uglifyjs --in-source-map inline --source-map-inline -c warnings=false",
     "sourcemap": "exorcist --root ../ bundle.js.map > bundle.js",
     "watch": "watchify --transform-key=development src/index.js -vd --delay 0 -p browserify-livereload -o bundle.js",
     "monitor": "onchange bundle.js -- npm-run-all lint test --silent",
